updates on    geek   and  team

--- a/app/casestudy/chazb.html
+++ b/app/casestudy/chazb.html
@@ -90,7 +90,7 @@ gtag('config', 'UA-159861942-1');
                                         <li>iOS and Android Mobile Apps</li>
                                        
                                     </ul>
-                                    <a style="color: #FD9800;" href="#" target="_blank" class="btn btn--primary portfolio-section__content-btn header__case--btn btn--hover">
+                                    <a style="color: #FD9800;" href="http://chazblive.com.ng/Chaz-B" target="_blank" class="btn btn--primary portfolio-section__content-btn header__case--btn btn--hover">
                                         Go to Website
                                     </a>
                                 </div>
