--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -545,7 +545,7 @@
 
                         </div>
                     </div>
-                    <div class="portfolio-section__image-container portfolio-section__image-container--resp portfolio-section__image-casing">
+                    <div class="portfolio-section__image-container  portfolio-section__image-casing">
                         <img src="assets/images/td-pro.png" class="portfolio-section__img-markup" alt="">
                     </div>
                 </div>
@@ -554,7 +554,7 @@
             <div class="portfolio-section-item">
                 <div class="portfolio-section-item-afiaanyi">
                     <div
-                        class="portfolio-section__text-content-container portfolio-section__text-content-container--afiaanyi">
+                        class="portfolio-section__text-content-container portfolio-section__text-content-container--afiaanyi mid">
                         <div>
                             <p style="color: white;" class="portfolio-section__text-content-sub-title">
                                 e-Commerce &amp; Marketplace
@@ -587,8 +587,8 @@
                         </div>
                     </div>
                     <div
-                        class="portfolio-section__image-container portfolio-section__image-container--resp portfolio-section__afiaanyi portfolio-section__image-casing">
-                        <img src="assets/images/afiaanyi.png" class="portfolio-section__img-markup" alt="">
+                        class="portfolio-section__image-container portfolio-section__afiaanyi portfolio-section__image-casing">
+                        <img src="assets/images/afiaanyi-pro.png" class="portfolio-section__img-markup" alt="">
                     </div>
                 </div>
             </div>
@@ -598,7 +598,7 @@
                 <div class="portfolio-section-item-tworeport">
 
                     <div
-                        class="portfolio-section__text-content-container portfolio-section__text-content-container--tworeport ">
+                        class="portfolio-section__text-content-container portfolio-section__text-content-container--tworeport wide">
                         <div>
                             <p style="color: white;" class="portfolio-section__text-content-sub-title">
                                 News &amp; Research
@@ -627,7 +627,7 @@
 
                         </div>
                     </div>
-                    <div class="portfolio-section__image-container portfolio-section__image-casing">
+                    <div class="portfolio-section__image-container portfolio-section__image-casing narrow">
                         <img src="assets/images/tworep.png" class="portfolio-section__img-markup" alt="">
                         <img src="assets/images/Ellipse-red.png" class="portfolio-section__ellipse" alt="">
                     </div>
@@ -845,7 +845,7 @@
                             </p>
                         </div>
                         <div class="portfolio-section-extended">
-                            <a class="portfolio-section-link" href="https://www.fave.ng" target="_blank">Visit
+                            <a style="color: #FA4E7F;" class="portfolio-section-link" href="https://www.fave.ng" target="_blank">Visit
                                 Website</a>
                             <!-- <a class="portfolio-section__download" href="#" >Download PDF</a> -->
 
@@ -877,8 +877,8 @@
                             </p>
                         </div>
                         <div class="portfolio-section-extended">
-                            <a class="portfolio-section-link" href="https://attend.kjk.africa" target="_blank">Visit Website</a>
-                            <a class="portfolio-section__download" href="#">Download PDF</a>
+                            <a style="color: #FA4E7F;"  class="portfolio-section-link" href="https://attend.kjk.africa" target="_blank">Visit Website</a>
+                            <a style="color: #FA4E7F;" class="portfolio-section__download" href="#">Download PDF</a>
 
                         </div>
                     </div>
@@ -908,7 +908,7 @@
                             </p>
                         </div>
                         <div class="portfolio-section-extended">
-                            <a class="portfolio-section-link portfolio-section-usecase" href="#">See Use
+                            <a style="color: #FA4E7F;" class="portfolio-section-link portfolio-section-usecase" href="#">See Use
                                 Case</a>
                             <!-- <a class="portfolio-section__download" href="#" >Download PDF</a> -->
 
@@ -941,7 +941,7 @@
                         </div>
                         <div class="portfolio-section-extended">
                             <!-- <a href="https://www.fave.ng" target="_blank">Visit Website</a> -->
-                            <a class="portfolio-sectio-link" href="#">Download PDF</a>
+                            <a style="color: #FA4E7F;" class="portfolio-sectio-link" href="#">Download PDF</a>
 
                         </div>
                     </div>
@@ -953,7 +953,7 @@
             <div class="portfolio-section-item pave">
 
                 <div>
-                    <div class="portfolio-section__image-container ">
+                    <div class="portfolio-section__image-container portfolio-section__image-container--resp">
                         <img src="assets/images/pave-pro.png" class="portfolio-section__img-markup" alt="">
                     </div>
                     <div class="portfolio-section__text-content-container ">
@@ -976,8 +976,8 @@
 
                         </div>
                         <div class="portfolio-section-extended">
-                            <a class="portfolio-section-link" href="https://www.pave.ng" target="_blank">Visit Website</a>
-                            <a class="portfolio-section__download" href="#">Download PDF</a>
+                            <a   style="color: #FA4E7F;"  class="portfolio-section-link" href="https://www.pave.ng" target="_blank">Visit Website</a>
+                            <a   style="color: #FA4E7F;" class="portfolio-section__download" href="#">Download PDF</a>
 
                         </div>
                     </div>
@@ -987,7 +987,7 @@
             <div class="portfolio-section-item mind">
 
                 <div>
-                    <div class="portfolio-section__image-container ">
+                    <div class="portfolio-section__image-container portfolio-section__image-container--resp">
                         <img src="assets/images/mindme.png" class="portfolio-section__img-markup" alt="">
                     </div>
                     <div class="portfolio-section__text-content-container ">
@@ -1011,7 +1011,7 @@
 
                         </div>
                         <div class="portfolio-section-extended">
-                            <a class="portfolio-section-link portfolio-section-usecase" href="#" >See Use
+                            <a  style="color: #FA4E7F;"  class="portfolio-section-link portfolio-section-usecase" href="#" >See Use
                                 Case</a>
                             <!-- <a class="portfolio-section__download" href="#" >Download PDF</a> -->
 
@@ -1028,7 +1028,7 @@
             <div class="portfolio-section-item travel">
 
                 <div>
-                    <div class="portfolio-section__image-container ">
+                    <div class="portfolio-section__image-container portfolio-section__image-container--resp">
                         <img src="assets/images/travel-pro.png" class="portfolio-section__img-markup" alt="">
                     </div>
                     <div class="portfolio-section__text-content-container ">
@@ -1051,7 +1051,7 @@
 
                         </div>
                         <div class="portfolio-section-extended">
-                            <a class="portfolio-section-link portfolio-section-usecase" href="#" >See Use
+                            <a style="color: #FA4E7F;" class="portfolio-section-link portfolio-section-usecase" href="#" >See Use
                                 Case</a>
                             <!-- <a class="portfolio-section__download" href="#" >Download PDF</a> -->
 
@@ -1063,7 +1063,7 @@
             <div class="portfolio-section-item directory">
 
                 <div>
-                    <div class="portfolio-section__image-container ">
+                    <div class="portfolio-section__image-container portfolio-section__image-container--resp">
                         <img src="assets/images/directory.png" class="portfolio-section__img-markup" alt="">
                     </div>
                     <div class="portfolio-section__text-content-container ">
@@ -1088,7 +1088,7 @@
 
                         </div>
                         <div class="portfolio-section-extended">
-                            <a class="portfolio-section-link portfolio-section-usecase" href="#" >See Use
+                            <a style="color: #FA4E7F;" class="portfolio-section-link portfolio-section-usecase" href="#" >See Use
                                 Case</a>
                             <!-- <a class="portfolio-section__download" href="#" >Download PDF</a> -->
 
@@ -1123,7 +1123,7 @@
 
                         </div>
                         <div class="portfolio-section-extended">
-                            <a class="portfolio-section-link portfolio-section-usecase" href="#">See Use
+                            <a style="color: #FA4E7F;"  class="portfolio-section-link portfolio-section-usecase" href="#">See Use
                                 Case</a>
                             <!-- <a class="portfolio-section__download" href="#" >Download PDF</a> -->
 
@@ -1939,6 +1939,7 @@
                         <div class="portfolio__container web">
                             <div class="portfolio__item portfolio__item--flex-img ">
                                 <img src="assets/images/sano-br.png " style="width: 100%; " alt=" ">
+                                <!-- <img src="assets/images/sano-br.png " style="width: 100%; " alt=" "> -->
                             </div>
                             <div class="portfolio__item portfolio__item--flex-text">
 
@@ -1947,6 +1948,11 @@
                                     <br class="no-break">
                                     Empire
                                 </h2>
+                                <!-- <h2 class="portfolio__title responsive__title">
+                                    Sano Organic
+                                    <br class="no-break">
+                                    Empire
+                                </h2> -->
                                 <ul>
                                     <p>WHAT WE DID</p>
                                     <li>Logo Creation</li>
