--- a/app/team.html
+++ b/app/team.html
@@ -431,7 +431,7 @@
                         <div class="team__board">
                             <div class="team__overlay">
                                 <p>Read Onyema's <br>
-                                   Bio
+                                   Profile
                                 </p>
                             </div>
                             <div class="team__anim">
@@ -443,7 +443,7 @@
                                     <h3 class="">Onyema Akumah</h3>
                                 </div>
                                 <div class="team__role">
-                                    <p>Founder, CrowdyVest Holdings and FarmCrowdy</p>
+                                    <p> <span>Founder</span>, CrowdyVest Holdings and FarmCrowdy</p>
                                 </div>
                                 <!-- <div class="team__links">
                                     <a href=""><img src="assets/images/linkedin-gradient.png" alt=""></a>
@@ -455,7 +455,7 @@
                         <div class="team__board ">
                             <div class="team__overlay">
                                 <p>Read Charles's <br>
-                                   Bio
+                                   Profile
                                 </p>
                             </div>
                             <div class="team__anim">
@@ -467,7 +467,7 @@
                                     <h3 class="">Charles Ojei</h3>
                                 </div>
                                 <div class="team__role xtra">
-                                    <p>Founder, HYBR Group</p>
+                                    <p><span>Founder</span>, HYBR Group</p>
                                 </div>
                                 <!-- <div class="team__links">
                                     <a href=""><img src="assets/images/linkedin-gradient.png" alt=""></a>
@@ -479,7 +479,7 @@
                         <div class="team__board">
                             <div class="team__overlay">
                                 <p>Read Adebola's <br>
-                                   Bio
+                                   Profile
                                 </p>
                             </div>
                             <div class="team__anim">
@@ -492,7 +492,7 @@
                                 </div>
                                 <div class="team__role">
                                     <p>
-                                        Senior Manager Finance Operations, American Towers
+                                        <span>Senior Manager</span> Finance Operations, American Towers
                                     </p>
                                 </div>
                                 <!-- <div class="team__links">
@@ -507,7 +507,7 @@
                         <div class="team__board">
                             <div class="team__overlay">
                                 <p>Read Olayemi's <br>
-                                   Bio
+                                   Profile
                                 </p>
                             </div>
                             <div class="team__anim">
@@ -520,7 +520,7 @@
                                 </div>
                                 <div class="team__role ">
                                     <p>
-                                        CEO, Heckerbella Limited
+                                        <span>CEO</span>, Heckerbella Limited
                                     </p>
                                 </div>
                                 <!-- <div class="team__links">
@@ -534,7 +534,7 @@
                         <div class="team__board">
                             <div class="team__overlay">
                                 <p>Read Onayinka's <br>
-                                   Bio
+                                   Profile
                                 </p>
                             </div>
                             <div class="team__anim">
@@ -547,7 +547,7 @@
                                 </div>
                                 <div class="team__role">
                                     <p>
-                                        Managing Director, Phanuel Limited
+                                       <span> Managing Director</span>, Phanuel Limited
                                     </p>
                                 </div>
                                 <!-- <div class="team__links">
@@ -561,7 +561,7 @@
                         <div class="team__board">
                             <div class="team__overlay">
                                 <p>Read Damcida's <br>
-                                   Bio
+                                   Profile
                                 </p>
                             </div>
                             <div class="team__anim">
@@ -574,7 +574,7 @@
                                 </div>
                                 <div class="team__role">
                                     <p>
-                                        Country Lead, HEIS global Limited
+                                       <span> Country Lead</span>, HEIS global Limited
                                     </p>
                                 </div>
                                 <!-- <div class="team__links">
@@ -587,7 +587,7 @@
                         <div class="team__board">
                             <div class="team__overlay">
                                 <p>Read Asaolu's <br>
-                                   Bio
+                                   Profile
                                 </p>
                             </div>
                             <div class="team__anim">
@@ -600,7 +600,7 @@
                                 </div>
                                 <div class="team__role">
                                     <p>
-                                        Associate Professor at University of Lagos
+                                       <span> Associate Professor</span> at University of Lagos
                                     </p>
                                 </div>
                                 <!-- <div class="team__links">
@@ -885,7 +885,7 @@
                         <div class="team__board 7">
                             <div class="team__overlay">
                                 <p>Read Olajumoke's <br>
-                                   Bio
+                                   Profile
                                 </p>
                             </div>
                             <div class="team__anim">
@@ -897,7 +897,7 @@
                                     <h3 class="">Olajumoke Oduwole</h3>
                                 </div>
                                 <p class="team__role xtra">
-                                    Founder and CEO, KJK Africa
+                                 <span>   Founder and CEO</span>, KJK Africa
                                 </p>
                                 <!-- <div class="team__links">
                                     <a href=""><img src="assets/images/linkedin-gradient.png" alt=""></a>
@@ -909,7 +909,7 @@
                         <div class="team__board 8">
                             <div class="team__overlay">
                                 <p>Read Olalekan's <br>
-                                   Bio
+                                   Profile
                                 </p>
                             </div>
                             <div class="team__anim">
@@ -922,7 +922,7 @@
                                     <h3 class="">Olalekan Oladele</h3>
                                 </div>
                                 <p class="team__role">
-                                    CTO (Chief Technology Officer), KJK Africa
+                                  <span>  CTO</span> (Chief Technology Officer), KJK Africa
                                 </p>
                                 <!-- <div class="team__links">
                                     <a href=""><img src="assets/images/linkedin-gradient.png" alt=""></a>
@@ -933,7 +933,7 @@
                         <div class="team__board 9">
                             <div class="team__overlay">
                                 <p>Read Dipo's <br>
-                                   Bio
+                                   Profile
                                 </p>
                             </div>
                             <div class="team__anim">
@@ -946,7 +946,7 @@
                                     <h3 class="">Dipo Olojede</h3>
                                 </div>
                                 <p class="team__role">
-                                    Technology Project Manager, KJK Africa
+                                  <span>  Technology Project Manager</span>, KJK Africa
                                 </p>
                                 <!-- <div class="team__links">
                                     <a href=""><img src="assets/images/linkedin-gradient.png" alt=""></a>
@@ -958,7 +958,7 @@
                         <div class="team__board 10">
                             <div class="team__overlay">
                                 <p>Read George's <br>
-                                   Bio
+                                   Profile
                                 </p>
                             </div>
                             <div class="team__anim">
@@ -971,7 +971,7 @@
                                     <h3 class="">George Edomwande </h3>
                                 </div>
                                 <p class="team__role">
-                                    Technology Product Lead, KJK Africa
+                                   <span> Technology Product Lead</span>, KJK Africa
                                 </p>
                                 <!-- <div class="team__links">
                                     <a href=""><img src="assets/images/linkedin-gradient.png" alt=""></a>
@@ -983,7 +983,7 @@
                         <div class="team__board 11">
                             <div class="team__overlay">
                                 <p>Read Abiola's <br>
-                                   Bio
+                                   Profile
                                 </p>
                             </div>
                             <div class="team__anim">
@@ -996,7 +996,7 @@
                                     <h3 class="">Abiola Akinwoleola</h3>
                                 </div>
                                 <p class="team__role">
-                                    Digital Growth Lead, KJK Africa
+                                   <span> Digital Growth Lead</span>, KJK Africa
                                 </p>
                                 <!-- <div class="team__links">
                                     <a href=""><img src="assets/images/linkedin-gradient.png" alt=""></a>
@@ -1008,7 +1008,7 @@
                         <div class="team__board 12">
                             <div class="team__overlay">
                                 <p>Read Kazeem's <br>
-                                   Bio
+                                   Profile
                                 </p>
                             </div>
                             <div class="team__anim">
@@ -1021,7 +1021,7 @@
                                     <h3 class="">Kazeem Adebola</h3>
                                 </div>
                                 <p class="team__role">
-                                    Graphics Design Lead, KJK Africa
+                                  <span>  Creative Design Lead</span>, KJK Africa
                                 <!-- </p>
                                 <div class="team__links">
                                     <a href=""><img src="assets/images/linkedin-gradient.png" alt=""></a>
