portfolio  and optimization

--- a/app/geek-capital.html
+++ b/app/geek-capital.html
@@ -482,17 +482,18 @@
                 <div class="geek__item">
                     <img src="assets/images/geek1.jpg" alt="">
                 </div>
-                <!-- <div class="geek__item">
-                    <img src="assets/images/geek5.jpg" alt="">
-                </div> -->
-                <!-- <div class="geek__item">
-                    <img src="assets/images/geek6.jpg" alt="">
-                </div> -->
+                
                 <div class="geek__item">
                     <img src="assets/images/geek7.png" alt="">
                 </div>
                 <div class="geek__item">
                     <img src="assets/images/geek8.png" alt="">
+                </div>
+                <div class="geek__item">
+                    <img src="assets/images/geek5.jpg" alt="">
+                </div> 
+                <div class="geek__item">
+                    <img src="assets/images/geek6.jpg" alt="">
                 </div>
                 <div class="geek__item">
                     <!-- <img src="assets/images/geek5.png" alt=""> -->
