--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -1150,10 +1150,7 @@
                             </p>
 
                             <p class="portfolio-section__text-content ">
-                                Directory by KJK is a software that collates information. The application stores
-                                information in an accessible and retrievable manner, thereby eliminating the need for
-                                manual storage systems. This technology
-                                can be applied to any industry that has information to share with its customers.
+                                This ready-to-launch e-commerce software can be customised for your business. The marketplace is entirely modifiable and can be built to suit your business needs. 
                             </p>
 
 
