--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -961,9 +961,7 @@
                             </p>
 
                             <p class="portfolio-section__text-content">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis officia
-                                consectetur odit vel labore ipsa, error ullam nihil repudiandae exercitationem.
-                                Officia laborum architecto recusandae voluptates quo inventore vel ducimus atque.
+                                Eduportal is a robust academic management solution built with world - class technology and infrastructure for schools for further help support the entire management processes from the registration to academic reporting, online exams to tuition payments amidst other numerous functions    
                             </p>
                         </div>
                         <div class="portfolio-section-extended">
