--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -37,6 +37,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/@glidejs/glide"></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
 
 
@@ -900,7 +901,7 @@
                             </p>
                         </div>
                         <div class="portfolio-section-extended">
-                            <a style="color: #225B9B;"  class="portfolio-section-link" href="https://attend.kjk.africa" target="_blank">Visit Website</a>
+                            <!-- <a style="color: #225B9B;"  class="portfolio-section-link" href="https://attend.kjk.africa" target="_blank" type="button" disabled>Visit Website</a> -->
                             <a style="color: #225B9B;" class="portfolio-section__download" href="#">Download PDF</a>
 
                         </div>
@@ -1422,7 +1423,7 @@
                                     <li>Contact Form</li>
                                     <li>Mobile Version</li>
                                 </ul>
-                                <a href="#" class="btn btn--link btn--primary btn--top-space  btn--hover">
+                                <a href="http://www.miss2mrs.kjkcompany.com" target="_blank" class="btn btn--link btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -1450,7 +1451,7 @@
                                     <li>Interactive Forms</li>
                                     <li> Graphics Design</li>
                                 </ul>
-                                <a href="#" class="btn btn--link btn-ruby btn--primary btn--top-space  btn--hover">
+                                <a href="https://ruby2.kjkcompany.com" target="_blank" class="btn btn--link btn-ruby btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -1478,7 +1479,7 @@
                                     <li> Content Management System </li>
 
                                 </ul>
-                                <a href="#" class="btn btn--link btn-apple btn--primary btn--top-space  btn--hover">
+                                <a href="https://www.apriltravelsng.com" target="_blank" class="btn btn--link btn-apple btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -1492,7 +1493,7 @@
                             <div class="portfolio__item portfolio__item--flex-img ">
                                 <img src="assets/images/saint.png" style="width: 100%; " alt=" ">
                             </div>
-                            <div class="portfolio__item portfolio__item--flex-text">
+                            <div class="portfolio__item portfolio__item--flex-text custom">
 
                                 <h2 class="portfolio__title saint web">
                                     Saints Community
@@ -1506,7 +1507,7 @@
                                     <li> Security/Malware/SSL Protections </li>
                                     <li> Code Guard Backups </li>
                                 </ul>
-                                <a href="#" class="btn btn--link btn-saint btn--primary btn--top-space  btn--hover">
+                                <a href="https://www.saintscommunity.net" class="btn btn--link btn-saint btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -1533,7 +1534,7 @@
                                     <li> Interactive Forms </li>
                                     <li> Graphics Design</li>
                                 </ul>
-                                <a href="#" class="btn btn--link btn-gimc btn--primary btn--top-space  btn--hover">
+                                <a href="http://gimc.kjkcompany.com" target="_blank" class="btn btn--link btn-gimc btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -1561,7 +1562,7 @@
                                     <li> Security/Malware/SSL Protections </li>
                                     <li> Code Guard Backups </li>
                                 </ul>
-                                <a href="#" class="btn btn--link btn-cakes btn--primary btn--top-space  btn--hover">
+                                <a href="https://cakesgallery.kjkcompany.com" target="_blank" class="btn btn--link btn-cakes btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -1590,7 +1591,7 @@
 
                                     <li> Graphics Design </li>
                                 </ul>
-                                <a href="#" class="btn btn--link btn-trans btn--primary btn--top-space  btn--hover">
+                                <a href="https://trans.kjkcompany.com" target="_blank" class="btn btn--link btn-trans btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -1618,7 +1619,7 @@
                                     <li> Social Media Prescence</li>
                                     <li> Mobile Version</li>
                                 </ul>
-                                <a href="#" class="btn btn--link btn-trippleg btn--primary btn--top-space  btn--hover">
+                                <a href="http://www.tripplegee.ng" target="_blank" class="btn btn--link btn-trippleg btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -1645,7 +1646,7 @@
                                     <li> Social Media Prescence</li>
                                     <li> Mobile Version</li>
                                 </ul>
-                                <a href="#" class="btn btn--link btn-radiant btn--primary btn--top-space  btn--hover">
+                                <a href="https://rlt.kjkcompany.com" target="_blank" class="btn btn--link btn-radiant btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -1673,7 +1674,7 @@
                                     <li> Security/Malware Protection</li>
                                     <li> SSL </li>
                                 </ul>
-                                <a href="#" class="btn btn--link btn-easi btn--primary btn--top-space  btn--hover">
+                                <a href="http://easisaver.kjkcompany.com" target="_blank" class="btn btn--link btn-easi btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -1687,7 +1688,7 @@
                             <div class="portfolio__item portfolio__item--flex-img ">
                                 <img src="assets/images/femi.png " style="width: 100%; " alt=" ">
                             </div>
-                            <div class="portfolio__item portfolio__item--flex-text">
+                            <div class="portfolio__item portfolio__item--flex-text custom">
 
                                 <h2 class="portfolio__title femi web">
                                     Femi Aluko
@@ -1704,7 +1705,7 @@
                                     <li> Cyberposters</li>
                                     <li> Newsletter </li>
                                 </ul>
-                                <a href="#" class="btn btn--link btn-femi btn--primary btn--top-space  btn--hover">
+                                <a href="https://www.femialuko.org" target="_blank" class="btn btn--link btn-femi btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -1730,7 +1731,7 @@
                                     <li> Photo Gallery</li>
                                     <li> Graphics</li>
                                 </ul>
-                                <a href="#" class="btn btn--link btn-queen btn--primary btn--top-space  btn--hover">
+                                <a href="https://www.concerned2.org" target="_blank" class="btn btn--link btn-queen btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -1756,7 +1757,7 @@
                                     <li> Contact Form</li>
                                     <li> Mobile Version</li>
                                 </ul>
-                                <a href="#" class="btn btn--link btn-j36 btn--primary btn--top-space  btn--hover">
+                                <a href="https://j36.kjkcompany.com" target="_blank" class="btn btn--link btn-j36 btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -1783,7 +1784,7 @@
                                     <li>Contact Form</li>
                                     <li>Mobile Version</li>
                                 </ul>
-                                <a href="#" class="btn btn--link btn-inline btn--primary btn--top-space  btn--hover">
+                                <a href="http://inline.kjkcompany.com" target="_blank" class="btn btn--link btn-inline btn--primary btn--top-space  btn--hover">
                                     Visit Website
                                 </a>
 
@@ -2525,7 +2526,7 @@
         var slideInDown = {
             distance: '100%',
             origin: 'top',
-            viewFactor: .5,
+            viewFactor: .2,
             opacity: 0,
             duration: 1200,
             delay: 200
@@ -2533,7 +2534,7 @@
         var slideInUp = {
             distance: '100%',
             origin: 'bottom',
-            viewFactor: .5,
+            viewFactor: .2,
             opacity: 0,
             duration: 1200,
             delay: 200
@@ -2613,6 +2614,7 @@
 
     </script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <script>
 
